@@ -1,10 +1,29 @@
-### Andr7st | JavaFX
+### Exercise Java-FXA01 | LoginForm
+
+<!-- Illustrative icons -->
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/git.png)
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/github.png)
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/java-open.png)
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/linux.png)
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/windows.png)
+ ![img](https://raw.github.com/Andr7st/index/main/andr7st/read/icon/0/32px/console.png)
 
 <!--  -->
 
-JDK: OpenJDK-11 Amazon Corretto.
-SDK: JavaFX-SDK-11
-Scene builder: v16
-:--module-path .\sdk\lib --add-modules javafx.controls,javafx.fxml
+* Is the classic Login form exercise, but using JavaFX.
+
+**JDK:** &nbsp;&nbsp;&nbsp;&nbsp; JDK-11 [OpenJDK-11 Amazon Corretto.](https://aws.amazon.com/corretto/?nc1=h_ls)
+
+**SDK:** &nbsp;&nbsp;&nbsp;&nbsp; [JavaFX-SDK-11](https://gluonhq.com/products/javafx/)
+
+**Builder:** [Scene 16](https://gluonhq.com/products/scene-builder/)
+
+login icon by https://www.klipartz.com/
+
+
+<!-- demo image: -->
+![i](./_project/img_0.png?raw=true "demo image")
 
 ---
+
+[**Index**](https://github.com/Andr7st/index)
